<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:orientation="vertical"> 
		<LinearLayout
		  android:layout_width="wrap_content"
		  android:layout_height="wrap_content" 
		  android:orientation="horizontal">
			<TextView 
			    android:layout_height="wrap_content"
			    android:layout_width="wrap_content"
			    android:layout_marginLeft="10dip"
			    android:layout_marginRight="10dip"
			    android:text="@string/str_source"
			    android:gravity="left"/>
			 <TextView 
			    android:id="@+id/source_Text"
			    android:layout_height="wrap_content"
			    android:layout_width="wrap_content"
			    android:layout_marginLeft="10dip"
			    android:layout_marginRight="10dip"
			    android:gravity="left"/>
		</LinearLayout>
		
		<LinearLayout
		  android:layout_width="wrap_content"
		  android:layout_height="wrap_content" 
		  android:orientation="horizontal">
			<TextView 
			    android:layout_height="wrap_content"
			    android:layout_width="wrap_content"
			    android:layout_marginLeft="10dip"
			    android:layout_marginRight="10dip"
			    android:text="@string/str_target"
			    android:gravity="left"/>
			 <TextView 
			    android:id="@+id/target_Text"
			    android:layout_height="wrap_content"
			    android:layout_width="wrap_content"
			    android:layout_marginLeft="10dip"
			    android:layout_marginRight="10dip"
			    android:gravity="left"/>
		</LinearLayout>
		
  		<ProgressBar
  			android:id="@+id/one_copy_percent" 
			android:background="#ff5a5a5a"
       	 	android:paddingLeft="5dip"
        	android:paddingRight="5dip"
        	android:paddingBottom="0dip"
			android:layout_height="30dip" 
			android:layout_width="fill_parent" 
			android:layout_gravity="center" 
			android:layout_marginLeft="10dip"
			android:max="100" 
			android:progress="0" 
			style="?android:attr/progressBarStyleHorizontal"/>  
		 <TextView 
		    android:id="@+id/one_percent_Text"
		    android:layout_height="wrap_content"
		    android:layout_width="wrap_content"
		    android:layout_marginLeft="10dip"
		    android:layout_marginRight="10dip"
		    android:gravity="left"/>
		<ProgressBar
  			android:id="@+id/all_copy_percent" 
			android:background="#ff5a5a5a"
       	 	android:paddingLeft="5dip"
        	android:paddingRight="5dip"
        	android:paddingBottom="0dip"
			android:layout_height="30dip" 
			android:layout_width="fill_parent" 
			android:layout_gravity="center" 
			android:layout_marginLeft="10dip"
			android:max="100" 
			android:progress="0" 
			style="?android:attr/progressBarStyleHorizontal"/>  
		<TextView  
		    android:id="@+id/all_percent_Text"
		    android:layout_height="wrap_content"
		    android:layout_width="wrap_content"
		    android:layout_marginLeft="10dip"
		    android:layout_marginRight="10dip"
		    android:gravity="left"/>
		<Button
  			android:id="@+id/but_stop_copy" 
  			android:text="@string/str_copystop"
			android:layout_height="wrap_content" 
			android:layout_width="200dip" 
			android:layout_gravity="center"/>  
</LinearLayout>
